--- a/NexuSeguros/src/main/java/com/mycompany/nexuseguros/dashboardAdmin.form
+++ b/NexuSeguros/src/main/java/com/mycompany/nexuseguros/dashboardAdmin.form
@@ -320,7 +320,7 @@
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
                   <Image iconType="3" name="/registro.png"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="Registro de clientes"/>
+                <Property name="text" type="java.lang.String" value="Registro de agentes"/>
                 <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
                   <Border info="org.netbeans.modules.form.compat2.border.MatteColorBorderInfo">
                     <MatteColorBorder bottom="1" left="10" right="1" top="1"/>
